--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,7 @@
 # https://qxzy.top/rules/QuantumultX/qixin.json
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "10 0-23 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/qmxx.js, img-url=https://i0.hdslb.com/bfs/album/5d117c3f2a1a15fe692e50282b3e7beeebf96422.png, enabled=true, tag=全免小说
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/jay_member_olb.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东欧乐b
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLongzhou.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=与“粽”不同
 cron "30 9,10 1-18 6 *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/jd_mcxhd_brandcity.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=新潮品牌狂欢
