--- a/rule/task.conf
+++ b/rule/task.conf
@@ -6,7 +6,9 @@ cron "*/10 0-1 6 * * *" script-path=https://raw.githubusercontent.com/pxylen/abc
 
 
 # 0点自动脚本
-cron "0 0 * * *" script-path=https://raw.githubusercontent.com/pxylen/dog_jd/master/jx_cfdtx.js,  img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jx_cfd_exchange.png, tag=京喜财富岛提现
+cron "10 0 * * *" script-path=https://raw.githubusercontent.com/ztxtop/x/main/youth_banner.js, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/taskicon/Youth.png, tag=中青看看赚
+
+cron "0 0 * * *" script-path=https://raw.githubusercontent.com/pxylen/dog_jd/master/jx_cfdtx.js,  img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/jx_cfd_exchange.png, enable=false,tag=京喜财富岛提现
 cron "0 0 * * *" script-path=https://raw.githubusercontent.com/pxylen/dog_jd/master/jd_blueCoin.js, img-url=https://raw.githubusercontent.com/Xirou/Script/master/jxc.PNG, enable=false, tag=京小超领蓝币
 cron "4 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/videoqq/videoqq.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/videoqq.png, tag=腾讯视频
 cron "5 0 * * *" script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/DiDi/DiDi_new.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/didi.png, tag=滴滴出行
@@ -14,7 +16,6 @@ cron "6 0 * * *" script-path=https://raw.githubusercontent.com/yangtingxiao/Quan
 cron "7 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/iQIYI.png, tag=爱奇艺
 cron "8 0 * * *" script-path=https://raw.githubusercontent.com/pxylen/abc_/sunert/Task/weibo.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/weibo.png, enable=true,  tag=微博&钱包
 cron "9 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/neteasenews/neteasenews.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/neteasenews.png, enabled=true, tag=网易新闻
-cron "10 0 * * *" script-path=https://raw.githubusercontent.com/ztxtop/x/main/youth_banner.js, img-url=https://raw.githubusercontent.com/erdongchanyo/icon/main/taskicon/Youth.png, tag=中青看看赚
 
 cron "10 9-22 * * *" script-path=https://raw.githubusercontent.com/photonmang/quantumultX/master/58/58.js,  img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/anbo.png, enable=false,tag=58同城
 
