--- a/task/JD_shadowRocket.conf
+++ b/task/JD_shadowRocket.conf
@@ -1,3 +1,5 @@
+京东5G超级盲盒 = type=cron,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_mohe.js,cronexpr="0 0,1-23/3 * * *", timeout=3600, script-update-interval=43200, enable=true
+
 京东动物联萌修复火爆 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_zoo.js,cronexpr="5 * * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东欧乐b = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/jay_member_olb.js,cronexpr="0 9 * * *", timeout=3600, script-update-interval=43200, enable=true
