--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,7 @@
 # 公众号少年歌行pro全网合一整理
 # 请善用搜索功能，如搜索京东可查所有京东脚本
 
+cron "18 9 1-18 6 *" script-path=https://cdn.jsdelivr.net/gh/zooPanda/zoo@dev/zooBaojiexiaoxiaole.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东宝洁消消乐
 cron "10 0-23 * * *" script-path=https://cdn.jsdelivr.net/gh/age174/-@main/qmxx.js, img-url=https://i0.hdslb.com/bfs/album/5d117c3f2a1a15fe692e50282b3e7beeebf96422.png, enabled=true, tag=全免小说
 cron "0 0,1-23/3 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_mohe.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东5G超级盲盒
 cron "5 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_zoo.js, img-url=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/image/jd.png, enabled=true, tag=京东动物联萌修复火爆
