--- a/task/JD_shadowRocket.conf
+++ b/task/JD_shadowRocket.conf
@@ -1,3 +1,5 @@
+京东宝洁消消乐 = type=cron,script-path=https://cdn.jsdelivr.net/gh/zooPanda/zoo@dev/zooBaojiexiaoxiaole.js,cronexpr="18 9 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
+
 京东5G超级盲盒 = type=cron,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_mohe.js,cronexpr="0 0,1-23/3 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东动物联萌修复火爆 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_zoo.js,cronexpr="5 * * * *", timeout=3600, script-update-interval=43200, enable=true
