--- a/task/shadowRocket.conf
+++ b/task/shadowRocket.conf
@@ -185,6 +185,8 @@ TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/Noby
 # 获取多账号京东Cookie
 获取多账号京东Cookie = type=http-request,pattern=https:\/\/me-api\.jd\.com\/user_new\/info\/GetJDUserInfoUnion,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/JD_extra_cookie.js,timeout=600,script-update-interval=43200,enable=true
 
+京东明星小店 = type=cron,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_star_shop.js,cronexpr="0 1,21 * * *", timeout=3600, script-update-interval=43200, enable=true
+
 京东宝洁消消乐 = type=cron,script-path=https://cdn.jsdelivr.net/gh/zooPanda/zoo@dev/zooBaojiexiaoxiaole.js,cronexpr="18 9 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
 
 京东5G超级盲盒 = type=cron,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_mohe.js,cronexpr="0 0,1-23/3 * * *", timeout=3600, script-update-interval=43200, enable=true
