--- a/task/JD_shadowRocket.conf
+++ b/task/JD_shadowRocket.conf
@@ -1,3 +1,5 @@
+京东柠檬新潮品牌联欢 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_xcpp.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
 京东618主会场红包雨 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/oujisome/jdshell/main/long_hby_lottery.js,cronexpr="1 20 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
 
 京东明星小店 = type=cron,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_star_shop.js,cronexpr="0 1,21 * * *", timeout=3600, script-update-interval=43200, enable=true
