--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,10 @@
 # https://qxzy.top/rules/QuantumultX/qixin.json
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "1 */1 1-30 6 *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/jd_618redpacket.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_speed_sign.png, enabled=true, tag=大赢家翻翻乐
+cron "1 0 * * *" script-path=https://raw.githubusercontent.com/panghu999/panghu/master/jd_xcpp.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=新潮品牌联欢
+cron "1 20 1-18 6 *" script-path=https://raw.githubusercontent.com/oujisome/jdshell/main/long_hby_lottery.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=京东618主会场红包雨
+cron "18 9 1-18 6 *" script-path=https://cdn.jsdelivr.net/gh/zooPanda/zoo@dev/zooBaojiexiaoxiaole.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=宝洁消消乐
 cron "0 1,21 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_star_shop.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=明星小店
 cron "0 0,1-23/3 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_mohe.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=5G超级盲盒
 cron "10 0-23 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/qmxx.js, img-url=https://i0.hdslb.com/bfs/album/5d117c3f2a1a15fe692e50282b3e7beeebf96422.png, enabled=true, tag=全免小说
@@ -44,8 +48,8 @@ cron "15 8,13,18 17-31 5 *" script-path=https://qxzy.top/rules/QuantumultX/js/hf
 cron "0 10 * * *" script-path=https://raw.githubusercontent.com/dompling/Script/master/gist/backup.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=Gist备份
 cron "5 10 * * *" script-path=https://raw.githubusercontent.com/dompling/Script/master/gist/restore.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=Gist恢复
 cron "0 30 7,10 * * *" script-path=https://raw.githubusercontent.com/panghu999/ningmeng/main/gd.js, img-url=https://qxzy.top/rules/QuantumultX/img/gdbs.png, enabled=true, tag=咕咚步数红包
-cron "30 * * * *" script-path=https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_half_redrain.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=半点京豆雨
-cron "0 * * * *" script-path=https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_super_redrain.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=整点京豆雨
+cron "30 * * * *" script-path=https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_half_redrain.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️半点京豆雨
+cron "0 * * * *" script-path=https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_super_redrain.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️整点京豆雨
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/yyzb.js, img-url=https://raw.githubusercontent.com/sngxpro/QuanX/master/icons/tom.png, enabled=true, tag=云云赚呗
 cron "0-59 9-14 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wdwhd.js, img-url=https://ae01.alicdn.com/kf/Uc5a0618d6a404079af9216e1012e35efs.jpg, enabled=true, tag=我的网红店
 cron "10 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/dwyjy.js, img-url=https://ae01.alicdn.com/kf/Uc740cff52d1c48c49223a8a7378a54d1q.jpg, enabled=true, tag=动物研究院
@@ -110,7 +114,6 @@ cron "10 0-23/4 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301
 cron "2 9 * * *" script-path=https://raw.githubusercontent.com/jonrean/JD-SHELL/main/monk_pasture.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=有机牧场
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/xl2101200/-/main/xyl.js, img-url=https://qxzy.top/rules/QuantumultX/img/xyl.png, enabled=true, tag=新亚链
 cron "0 13 9 * * *" script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_rankingList.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东排行榜
-cron "0 * * * *" script-path=https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_super_redrain.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东整点京豆红包雨
 cron "35 9 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/tpyqc.js, img-url=https://ae01.alicdn.com/kf/Uf51ecfcc4b0949e18441fc3f3f4919ede.jpg, enabled=true, tag=太平洋汽车网
 cron "10 8 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/sphz.js, img-url=https://ae01.alicdn.com/kf/U6fe8c098a65740039ac7767867746c4aK.jpg, enabled=true, tag=视频号互助
 cron "20,50 0-23 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/jjrm.js, img-url=https://ae01.alicdn.com/kf/Uf3f262fb6d81492a8e350a0bb97a04a0g.jpg, enabled=true, tag=久金人脉
@@ -285,7 +288,7 @@ cron "11 1-23/5 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_supe
 cron "10 7 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_bean_home.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_bean_home.png, enabled=true, tag=领京豆额外奖励
 cron "10 7 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_car.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_car.png, enabled=true, tag=京东汽车
 cron "0 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_car_exchange.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_redPacket.png, enabled=true, tag=京东汽车兑换
-cron "5 0 * * *" script-path=https://raw.githubusercontent.com/toulanboy/scripts/master/jd_price_detect/jd_price_detect.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京东价格提醒
+cron "5 0 * * *" script-path=https://raw.githubusercontent.com/toulanboy/scripts/master/jd_price_detect/jd_price_detect.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️京东价格提醒
 cron "15 17 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/backUp/xmSports.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/xmyd.png, tag=小米运动
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js, img-url=https://qxzy.top/rules/QuantumultX/img/52pj.png, enabled=true, tag=吾爱破解
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js, img-url=https://qxzy.top/rules/QuantumultX/img/iQIYI.png, enabled=true, tag=爱奇艺
