--- a/task/shadowRocket.conf
+++ b/task/shadowRocket.conf
@@ -192,6 +192,8 @@ TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/Noby
 获取多账号京东Cookie = type=http-request,pattern=https:\/\/me-api\.jd\.com\/user_new\/info\/GetJDUserInfoUnion,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/JD_extra_cookie.js,timeout=600,script-update-interval=43200,enable=true
 
 
+京东新潮品牌狂欢wenmoux = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/jd_618redpacket.js,cronexpr="1 0-23/1 * 6 *", timeout=3600, script-update-interval=43200, enable=true
+
 京东柠檬新潮品牌联欢 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_xcpp.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东618主会场红包雨 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/oujisome/jdshell/main/long_hby_lottery.js,cronexpr="1 20 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
