--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,8 +2,8 @@
 # https://qxzy.top/rules/QuantumultX/qixin.json
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "4 10 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_mcxhd.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=新潮品牌狂欢
 cron "1 */1 1-30 6 *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/jd_618redpacket.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_speed_sign.png, enabled=true, tag=大赢家翻翻乐
-cron "1 0 * * *" script-path=https://raw.githubusercontent.com/panghu999/panghu/master/jd_xcpp.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=新潮品牌联欢
 cron "1 20 1-18 6 *" script-path=https://raw.githubusercontent.com/oujisome/jdshell/main/long_hby_lottery.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=京东618主会场红包雨
 cron "18 9 1-18 6 *" script-path=https://cdn.jsdelivr.net/gh/zooPanda/zoo@dev/zooBaojiexiaoxiaole.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=宝洁消消乐
 cron "0 1,21 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_star_shop.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=明星小店
