--- a/task/lxk0301_LoonTask.conf
+++ b/task/lxk0301_LoonTask.conf
@@ -10,7 +10,6 @@ cron "0 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresour
 cron "0 0-18/6 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_carnivalcity.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东手机狂欢城
 cron "2 0-23/4 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_cash.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=签到领现金
 cron "5 0,13,19 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_cfd.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jxcfd.png, enabled=true, tag=京喜财富岛
-cron "0 0-23/1 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_city.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=城城领现金
 cron "5 0,23 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_club_lottery.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdyjd.png, enabled=true, tag=摇京豆
 cron "10 9 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_crazy_joy.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_crazy_joy.png, enabled=true, tag=crazyJoy任务
 cron "10 12 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_crazy_joy_bonus.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_crazy_joy.png, enabled=true, tag=监控crazyJoy分红
@@ -33,11 +32,13 @@ cron "0 0-16/8 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdr
 cron "15 10 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_run.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdcww.png, enabled=true, tag=宠汪汪邀请助力与赛跑助力
 cron "10 0-21/3 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_steal.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdcww.png, enabled=true, tag=宠汪汪偷好友积分与狗粮
 cron "1 0,11,21 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jump.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=跳跳乐瓜分京豆
+cron "4 10 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxlhb.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京喜领88元红包
 cron "0 9,12,18 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxnc.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jxnc.png, enabled=true, tag=京喜农场
 cron "10 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_kd.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_kd.png, enabled=true, tag=京东快递签到
 cron "10-20/5 12 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_live.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京东直播
 cron "0,30 0-23/1 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_live_redrain.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=超级直播间红包雨
-cron "4 10 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_market_lottery.js, enabled=true, 
+cron "4 10 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_market_lottery.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=幸运大转盘
+cron "4 10 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_mcxhd.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=新潮品牌狂欢
 cron "0 0,1-23/3 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_mohe.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=5G超级盲盒
 cron "3 0-23/2 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_moneyTree.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdyqs.png, enabled=true, tag=京东摇钱树
 cron "10 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_ms.js, img-url=https://raw.githubusercontent.com/yogayyy/Scripts/master/Icon/shylocks/jd_ms.jpg, enabled=true, tag=京东秒秒币
@@ -62,5 +63,4 @@ cron "0 0 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdreso
 cron "0 0 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_xtg_help.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=家电星推官好友互助
 cron "33 0,6-23/2 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_zoo.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=618动物联萌
 cron "0-59/30 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_zooCollect.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=618动物联萌收集金币
-cron "5 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jx_sign.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true, tag=京喜签到
 cron "15 17 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/xmSports.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/xmyd.png, enabled=true, tag=小米运动
