--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,7 @@
 # https://qxzy.top/rules/QuantumultX/qixin.json
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
+cron "15 0,6,13,19,21 * * *" script-path=https://raw.githubusercontent.com/hyzaw/scripts/main/ddo_pk.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京享值PK
 cron "4 10 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_mcxhd.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=新潮品牌狂欢
 cron "1 */1 1-30 6 *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/jd_618redpacket.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_speed_sign.png, enabled=true, tag=大赢家翻翻乐
 cron "1 20 1-18 6 *" script-path=https://raw.githubusercontent.com/oujisome/jdshell/main/long_hby_lottery.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=京东618主会场红包雨
@@ -44,7 +45,6 @@ cron "0 0 * * *" script-path=https://raw.githubusercontent.com/dompling/Script/m
 cron "25 9 * 5,6 *" script-path=https://qxzy.top/rules/QuantumultX/js/hf/hf_adolf_oneplus.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=赢一加新品手机
 cron "0 30 21 * * 2,4,7 " script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/ssq/ssq.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/Two_color_ball.png, enabled=true, tag=双色球
 cron "0 */60 6-23 * *" script-path=https://raw.githubusercontent.com/panghu999/ningmeng/main/kkj.js, img-url=https://qxzy.top/rules/QuantumultX/img/kkj.png, enabled=true, tag=看看集自动阅读
-cron "15 8,13,18 17-31 5 *" script-path=https://qxzy.top/rules/QuantumultX/js/hf/hf_adolf_pk.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=京享值PK
 cron "0 10 * * *" script-path=https://raw.githubusercontent.com/dompling/Script/master/gist/backup.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=Gist备份
 cron "5 10 * * *" script-path=https://raw.githubusercontent.com/dompling/Script/master/gist/restore.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=Gist恢复
 cron "0 30 7,10 * * *" script-path=https://raw.githubusercontent.com/panghu999/ningmeng/main/gd.js, img-url=https://qxzy.top/rules/QuantumultX/img/gdbs.png, enabled=true, tag=咕咚步数红包
