--- a/task/JD_shadowRocket.conf
+++ b/task/JD_shadowRocket.conf
@@ -1,6 +1,22 @@
-京东新潮品牌狂欢wenmoux = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/jd_618redpacket.js,cronexpr="1 0-23/1 * 6 *", timeout=3600, script-update-interval=43200, enable=true
+京东新潮品牌狂欢执意版 = type=cron,script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/zy_xckh.js,cronexpr="0 10 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东柠檬新潮品牌联欢 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_xcpp.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东新潮品牌狂欢0301版 = type=cron,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_mcxhd.js,cronexpr="4 10 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东京喜领88元红包 = type=cron,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxlhb.js,cronexpr="4 10 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东618开卡活动3 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard03.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东618开卡活动2 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard02.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东618开卡活动1 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard01.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东柠檬华为荣耀618 = type=cron,script-path=https://ghproxy.com/https://github.com/panghu999/panghu/raw/master/jd_ry618.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东京享值PK = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/hyzaw/scripts/main/ddo_pk.js,cronexpr="15 0,6,13,19,21 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东新潮品牌狂欢wenmouxb版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/jd_618redpacket.js,cronexpr="1 0-23/1 * 6 *", timeout=3600, script-update-interval=43200, enable=true
+
+京东新潮品牌联欢柠檬版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_xcpp.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东618主会场红包雨 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/oujisome/jdshell/main/long_hby_lottery.js,cronexpr="1 20 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
 
