--- a/task/JD_shadowRocket.conf
+++ b/task/JD_shadowRocket.conf
@@ -1,3 +1,9 @@
+京东半点京豆雨龙珠 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/oujisome/jdshell/main/jd_half_redrain.js,cronexpr="30 * * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东整点京豆雨龙珠 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/oujisome/jdshell/main/jd_super_redrain.js,cronexpr="0 * * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东618开卡活动4 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard04.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
 京东新潮品牌狂欢执意版 = type=cron,script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/zy_xckh.js,cronexpr="0 10 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东新潮品牌狂欢0301版 = type=cron,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_mcxhd.js,cronexpr="4 10 * * *", timeout=3600, script-update-interval=43200, enable=true
@@ -10,7 +16,7 @@
 
 京东618开卡活动1 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard01.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东柠檬华为荣耀618 = type=cron,script-path=https://ghproxy.com/https://github.com/panghu999/panghu/raw/master/jd_ry618.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东柠檬华为荣耀618 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_ry618.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东京享值PK = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/hyzaw/scripts/main/ddo_pk.js,cronexpr="15 0,6,13,19,21 * * *", timeout=3600, script-update-interval=43200, enable=true
 
@@ -38,7 +44,7 @@
 
 京东特物国创IP = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_gcip.js,cronexpr="1 0 * * * ", timeout=3600, script-update-interval=43200, enable=true
 
-京东特物ZX联想 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/superBrand.js,cronexpr="30 11 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东特物ZX联想 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/jd_superBrand.js,cronexpr="30 11 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东柠檬东东泡泡大战 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_ppdz.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
@@ -117,10 +123,6 @@
 京东一次性入会领豆3 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/member_03.js,cronexpr="0 7 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东一次性入会领豆2 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/member_02.js,cronexpr="0 7 * * *", timeout=3600, script-update-interval=43200, enable=true
-
-京东半点京豆雨龙猪猪 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_half_redrain.js,cronexpr="30 * * * *", timeout=3600, script-update-interval=43200, enable=true
-
-京东整点京豆雨龙猪猪 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/nianyuguai/longzhuzhu/main/qx/jd_super_redrain.js,cronexpr="0 * * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东合肥旗舰店开业（一次性活动） = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/adolf_hf.js,cronexpr="10 9 * * *", timeout=3600, script-update-interval=43200, enable=true
 
