--- a/task/shadowRocket.conf
+++ b/task/shadowRocket.conf
@@ -184,6 +184,12 @@ TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/Noby
 # 获取多账号京东Cookie
 获取多账号京东Cookie = type=http-request,pattern=https:\/\/me-api\.jd\.com\/user_new\/info\/GetJDUserInfoUnion,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/JD_extra_cookie.js,timeout=600,script-update-interval=43200,enable=true
 
+京东618开卡活动5 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard05.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东城城分现金互助执意版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/zy_ccfxj.js,cronexpr="0 1 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东618竞猜 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/zy_618jc.js,cronexpr="0 10 * * *", timeout=3600, script-update-interval=43200, enable=true
+
 京东半点京豆雨龙珠 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/oujisome/jdshell/main/jd_half_redrain.js,cronexpr="30 * * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东整点京豆雨龙珠 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/oujisome/jdshell/main/jd_super_redrain.js,cronexpr="0 * * * *", timeout=3600, script-update-interval=43200, enable=true
