--- a/task/JD_shadowRocket.conf
+++ b/task/JD_shadowRocket.conf
@@ -1,3 +1,9 @@
+京东618开卡活动5 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard05.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东城城分现金互助执意版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/zy_ccfxj.js,cronexpr="0 1 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东618竞猜 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/zy_618jc.js,cronexpr="0 10 * * *", timeout=3600, script-update-interval=43200, enable=true
+
 京东半点京豆雨龙珠 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/oujisome/jdshell/main/jd_half_redrain.js,cronexpr="30 * * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东整点京豆雨龙珠 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/oujisome/jdshell/main/jd_super_redrain.js,cronexpr="0 * * * *", timeout=3600, script-update-interval=43200, enable=true
