--- a/task/JD_shadowRocket.conf
+++ b/task/JD_shadowRocket.conf
@@ -1,3 +1,7 @@
+京东限时盲盒动物园版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLimitbox.js,cronexpr="10 10 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
+
+京东限时盲盒温某人版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/jd_limitBox.js,cronexpr="30 7,19 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
+
 京东618开卡活动5 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard05.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东城城分现金互助执意版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/zy_ccfxj.js,cronexpr="0 1 * * *", timeout=3600, script-update-interval=43200, enable=true
