--- a/task/shadowRocket.conf
+++ b/task/shadowRocket.conf
@@ -184,6 +184,8 @@ TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/Noby
 # 获取多账号京东Cookie
 获取多账号京东Cookie = type=http-request,pattern=https:\/\/me-api\.jd\.com\/user_new\/info\/GetJDUserInfoUnion,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/JD_extra_cookie.js,timeout=600,script-update-interval=43200,enable=true
 
+京东翻翻乐提现 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/jiulan/platypus/main/scripts/jd_ffl.js,cronexpr="5,35 * * 6 *", timeout=3600, script-update-interval=43200, enable=true
+
 京东限时盲盒动物园版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLimitbox.js,cronexpr="10 10 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
 
 京东限时盲盒温某某版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/jd_limitBox.js,cronexpr="30 7,19 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
@@ -216,7 +218,7 @@ TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/Noby
 
 京东京享值PK = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/hyzaw/scripts/main/ddo_pk.js,cronexpr="15 0,6,13,19,21 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东新潮品牌狂欢wenmouxb版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/jd_618redpacket.js,cronexpr="1 0-23/1 * 6 *", timeout=3600, script-update-interval=43200, enable=true
+京东新潮品牌狂欢翻翻乐 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/jd_618redpacket.js,cronexpr="1 0-23/1 * 6 *", timeout=3600, script-update-interval=43200, enable=true
 
 京东新潮品牌联欢柠檬版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_xcpp.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
