--- a/task/JD_shadowRocket.conf
+++ b/task/JD_shadowRocket.conf
@@ -1,3 +1,5 @@
+京东GNC组队瓜分京豆 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooJointeam01.js,cronexpr="0 6 * * *", timeout=3600, script-update-interval=43200, enable=true
+
 京东宠汪汪积分兑换奖品 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/hyzaw/scripts/main/ddo_joy_reward.js,cronexpr="0 0-16/8 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东省钱大赢家之翻翻乐0301版 = type=cron,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_big_winner.js,cronexpr="20 * * * *", timeout=3600, script-update-interval=43200, enable=true
