--- a/task/shadowRocket.conf
+++ b/task/shadowRocket.conf
@@ -183,6 +183,8 @@ TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/Noby
 # 获取多账号京东Cookie
 获取多账号京东Cookie = type=http-request,pattern=https:\/\/me-api\.jd\.com\/user_new\/info\/GetJDUserInfoUnion,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/JD_extra_cookie.js,timeout=600,script-update-interval=43200,enable=true
 
+京东GNC组队瓜分京豆 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooJointeam01.js,cronexpr="0 6 * * *", timeout=3600, script-update-interval=43200, enable=true
+
 京东宠汪汪积分兑换奖品 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/hyzaw/scripts/main/ddo_joy_reward.js,cronexpr="0 0-16/8 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东省钱大赢家之翻翻乐0301版 = type=cron,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_big_winner.js,cronexpr="20 * * * *", timeout=3600, script-update-interval=43200, enable=true
