--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -1,5 +1,5 @@
 # 奇心脚本合集
-# https://qxzy.top/rules/QuantumultX/qixin.json
+# 祝高考学子，金榜题名!
 
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxzy.top/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
 cron "0  9 * * *" script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/zy_618jc.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd618.png, enabled=true, tag=手机竞猜
