--- a/task/shadowRocket.conf
+++ b/task/shadowRocket.conf
@@ -185,8 +185,6 @@ TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/Noby
 
 京东GNC组队瓜分京豆 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooJointeam01.js,cronexpr="0 6 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东宠汪汪积分兑换奖品 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/hyzaw/scripts/main/ddo_joy_reward.js,cronexpr="0 0-16/8 * * *", timeout=3600, script-update-interval=43200, enable=true
-
 京东省钱大赢家之翻翻乐0301版 = type=cron,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_big_winner.js,cronexpr="20 * * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东翻翻乐提现 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/jiulan/platypus/main/scripts/jd_ffl.js,cronexpr="5,35 * * 6 *", timeout=3600, script-update-interval=43200, enable=true
@@ -220,8 +218,6 @@ TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/Noby
 京东618开卡活动1 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard01.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东柠檬华为荣耀618 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_ry618.js,cronexpr="1 0 * * *", timeout=3600, script-update-interval=43200, enable=true
-
-京东京享值PK = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/hyzaw/scripts/main/ddo_pk.js,cronexpr="15 0,6,13,19,21 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东新潮品牌狂欢翻翻乐 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/master/jd/jd_618redpacket.js,cronexpr="1 0-23/1 * 6 *", timeout=3600, script-update-interval=43200, enable=true
 
@@ -351,7 +347,7 @@ TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/Noby
 
 京东店铺大转盘 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro2/AutoSyncScript/monk/normal/monk_shop_lottery.js,cronexpr="3 0,10,23 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东每日抽奖 = type=cron,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_daily_lottery.js,cronexpr="13 1,22,23 * * *", timeout=3600, script-update-interval=43200, enable=true
+ = type=cron,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_daily_lottery.js,cronexpr="13 1,22,23 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东到家鲜豆庄园领水滴 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/passerby-b/JDDJ/main/jddj_getPoints.js,cronexpr="0-25/5 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
