--- a/task/JD_shadowRocket.conf
+++ b/task/JD_shadowRocket.conf
@@ -1,6 +1,6 @@
 京东京享值PK = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/hyzaw/scripts/main/ddo_pk.js,cronexpr="15 0,6,13,19,21 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东合肥旗舰店开业动物园版 = type=cron,script-path=https://raw.githubusercontent.com/zooPanda/zoo/dev/zooSupershophf.js,cronexpr="0 6 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东合肥旗舰店开业动物园版 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooSupershophf.js,cronexpr="0 6 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东GNC组队瓜分京豆 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooJointeam01.js,cronexpr="0 6 * * *", timeout=3600, script-update-interval=43200, enable=true
 
