--- a/rule/ssr_ml.conf
+++ b/rule/ssr_ml.conf
@@ -31,7 +31,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/pxylen/abc_/master/rule/loon_direct.list,免流
 RULE-SET,https://raw.githubusercontent.com/pxylen/abc_/master/rule/loon_proxy.list,PROXY
 RULE-SET,https://raw.githubusercontent.com/pxylen/abc_/master/rule/loon_reject.list,REJECT
-
+RULE-SET,https://raw.githubusercontent.com/pxylen/abc_/master/rule/appleOTA.list,REJECT
 
 # 广告拦截
 DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Privacy/Privacy_Domain.list,REJECT
